--- a/style.css
+++ b/style.css
@@ -303,3 +303,14 @@ table, th, td {
 .edit-column:hover {
   color: green;
 }
+
+#student-assignments, #edit-grading {
+  /* width: 100%; */
+  padding: 15px;
+  margin: 20px;
+  border: 2px solid black;
+  background-color: white;
+  justify-content: center;
+  justify-items: center;
+}
+
