--- a/style.css
+++ b/style.css
@@ -314,3 +314,33 @@ table, th, td {
   justify-items: center;
 }
 
+
+
+
+#bookfinder p {
+  /* override default p color of white */
+  color: black;
+}
+
+.bookfinder-nav {
+  width: 100%;
+}
+
+.bookfinder-form {
+  color: white;
+  margin: 10px;
+  display: inline-grid;
+}
+
+.bookfinder-form label {
+  all: unset; /* reset all styling to default */
+}
+
+.bookfinder-dropzone {
+  background-color: white; 
+  color: black;
+  height: 100px; 
+  margin: 10px;
+  padding: 10px;
+  display: inline-grid;
+}
