--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ header.minimized .tab-names {
   margin-top: auto;
   object-fit: cover;
   bottom: 0px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.7);
 }
 
 .overlay {
@@ -274,7 +275,7 @@ select:hover {
   position: relative;
   z-index: 10;
   display: inline-flex;
-  width: 100%;
+  width: calc(100% - 20px);
   overflow-x: auto; /* Adds a horizontal scrollbar when needed */
 }
 
